# l2

./: Cargo.toml
t01/: Cargo.toml  README.md
t01/src/: main.rs
t02/: Cargo.toml  README.md
t02/src/: impl_with_iterators.rs  impl_with_states.rs  main.rs
t03/: Cargo.toml  README.md  sort.txt
t03/src/: main.rs  months.rs  sort.rs
t04/: Cargo.toml  README.md
t04/src/: main.rs
t05/: Cargo.toml  README.md
t05/src/: main.rs
t06/: Cargo.toml  README.md
t06/src/: main.rs
t07/: Cargo.toml  README.md
t07/src/: main.rs
t08/: Cargo.toml  README.md
t08/src/: main.rs
t09/: Cargo.toml  README.md
t09/src/: main.rs
t10/: Cargo.toml  README.md
t10/src/: main.rs
t11/: Cargo.toml  README.md
t11/scripts/: create_events.sh  delete_event.sh  events_for_day.sh  events_for_month.sh  events_for_week.sh  update_events.sh
t11/src/: lib.rs  main.rs  model.rs
t11/src/app/: error.rs  middleware.rs  mod.rs
t11/src/repository/: mod.rs
t12/: Cargo.toml
t12/src/: main.rs
t13/: Cargo.toml
t13/src/: main.rs
t14/: Cargo.toml
t14/src/: main.rs
t15/: Cargo.toml
t15/src/: main.rs
t16/: Cargo.toml
t16/src/: main.rs
