[workspace]
members  = ["t01", "t02", "t03", "t04", "t05"]
resolver = "2"


[workspace.dependencies]
anyhow      = { version = "1" }
bon         = { version = "2.3" }
camino      = { version = "1.1" }
clap        = { version = "4.5", features = ["derive"] }
expect-test = "1.5.0"
itertools   = "0.13"
