[package]
edition = "2021"
name    = "t09"
version = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
camino     = { workspace = true }
clap       = { workspace = true }
itertools  = { workspace = true }
reqwest    = { version = "0.12" }
scraper    = { version = "0.20" }
tokio      = { workspace = true }
tokio-util = { workspace = true }
