[package]
edition = "2021"
name    = "t11"
version = "0.1.0"

[dependencies]
anyhow             = { workspace = true }
axum               = { version = "0.7", features = ["macros"] }
chrono             = { version = "0.4", features = ["serde"] }
clap               = { workspace = true }
dashmap            = { version = "6.1" }
dotenvy            = { version = "0.15" }
http-body-util     = { version = "0.1.2" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tower              = { version = "0.5", features = ["full"] }
tower-http         = { version = "0.6.1", features = ["full"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid               = { version = "1.1.3", features = ["serde"] }
